k8s/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: inventalert-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: <ECR_URI>/inventalert-inventory-service:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 45
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 90
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventalert-prod
spec:
  selector:
    app: inventory-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: management
      port: 8090
      targetPort: 8090
